Check nullptr before using pointer

Calling QRemoteObjectHost::hostUrl() will crash if remoteObjectIO
is nullptr, so check if it's not nullptr before using it.

Fixes: QTBUG-85124
Done-with: sona.kurazyan@qt.io
Change-Id: I1f73589958ba08d3997193653b57a64a223cd201
Reviewed-by: Sona Kurazyan <sona.kurazyan@qt.io>
(cherry picked from commit f11c40b55f3657663473865e8b644ed8c963f501)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>